fix(dates filter): set the good spacing between elements

--- a/src/components/SelectDates/SelectDates.styl
+++ b/src/components/SelectDates/SelectDates.styl
@@ -32,6 +32,9 @@ select-date-height-small = 2.75rem
 .SelectDates__month
     width 9rem
 
+.SelectDates__DateYearSelector
+    margin-right 0.5rem
+
 +small-screen()
     elements-spacing = 0.875rem
 
